@@ -63,7 +63,6 @@
     <File name="AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" />
     <File name="gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
-    <File name="Mono.TextEditor/TextUtil.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor/FoldingType.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor.Highlighting/Marker.cs" subtype="Code" buildaction="Compile" />
     <File name="BrownStyle.xml" subtype="Code" buildaction="EmbedAsResource" />
