@@ -774,5 +774,257 @@ namespace Mono.TextEditor
 		
 		public event EventHandler DocumentUpdated;
 		#endregion
+	
+		#region Helper functions
+		public const string openBrackets    = "([{<";
+		public const string closingBrackets = ")]}>";
+		
+		public static bool IsBracket (char ch)
+		{
+			return (openBrackets + closingBrackets).IndexOf (ch) >= 0;
+		}
+		
+		public static bool IsWordSeparator (char ch)
+		{
+			return Char.IsWhiteSpace (ch) || (Char.IsPunctuation (ch) && ch != '_');
+		}
+		
+		public bool IsWholeWordAt (int offset, int length)
+		{
+			return (offset == 0 || IsWordSeparator (GetCharAt (offset - 1))) &&
+				   (offset + length == Length || IsWordSeparator (GetCharAt (offset + length)));
+		}
+		
+		public int GetMatchingBracketOffset (int offset)
+		{
+			if (offset < 0 || offset >= Length)
+				return -1;
+			char ch = GetCharAt (offset);
+			int bracket = openBrackets.IndexOf (ch);
+			int result;
+			if (bracket >= 0) {
+				result = SearchMatchingBracketForward (offset + 1, bracket);
+			} else {
+				bracket = closingBrackets.IndexOf (ch);
+				if (bracket >= 0) {
+					result = SearchMatchingBracketBackward (offset - 1, bracket);
+				} else {
+					result = -1;
+				}
+			}
+			return result;
+		}
+		
+		int SearchMatchingBracketForward (int offset, int bracket)
+		{
+			return SearchMatchingBracket (offset, closingBrackets[bracket], openBrackets[bracket], 1);
+		}
+		
+		int SearchMatchingBracketBackward (int offset, int bracket)
+		{
+			return SearchMatchingBracket (offset, openBrackets[bracket], closingBrackets[bracket], -1);
+		}
+		
+		int SearchMatchingBracket (int offset, char openBracket, char closingBracket, int direction)
+		{
+			bool isInString       = false;
+			bool isInChar         = false;	
+			bool isInBlockComment = false;
+			int depth = -1;
+			while (offset >= 0 && offset < Length) {
+				char ch = GetCharAt (offset);
+				switch (ch) {
+					case '/':
+						if (isInBlockComment) 
+							isInBlockComment = GetCharAt (offset + direction) != '*';
+						if (!isInString && !isInChar && offset - direction < Length) 
+							isInBlockComment = offset > 0 && GetCharAt (offset - direction) == '*';
+						break;
+					case '"':
+						if (!isInChar && !isInBlockComment) 
+							isInString = !isInString;
+						break;
+					case '\'':
+						if (!isInString && !isInBlockComment) 
+							isInChar = !isInChar;
+						break;
+					default :
+						if (ch == closingBracket) {
+							if (!(isInString || isInChar || isInBlockComment)) 
+								--depth;
+						} else if (ch == openBracket) {
+							if (!(isInString || isInChar || isInBlockComment)) {
+								++depth;
+								if (depth == 0) 
+									return offset;
+							}
+						}
+						break;
+				}
+				offset += direction;
+			}
+			return -1;
+		}
+		
+		public enum CharacterClass {
+			Unknown,
+			Whitespace,
+			IdentifierPart
+		}
+		
+		public static CharacterClass GetCharacterClass (char ch)
+		{
+			if (Char.IsWhiteSpace (ch))
+				return CharacterClass.Whitespace;
+			if (Char.IsLetterOrDigit (ch) || ch == '_')
+				return CharacterClass.IdentifierPart;
+			return CharacterClass.Unknown;
+		}
+		
+		public int FindNextWordOffset (int offset)
+		{
+			int lineNumber   = OffsetToLineNumber (offset);
+			LineSegment line = GetLine (lineNumber);
+			if (line == null)
+				return offset;
+			
+			int result    = offset;
+			int endOffset = line.Offset + line.EditableLength;
+			if (result == endOffset) {
+				line = GetLine (lineNumber + 1);
+				if (line != null)
+					result = line.Offset;
+				return result;
+			}
+			
+			CharacterClass startClass = GetCharacterClass (GetCharAt (result));
+			while (offset < endOffset && GetCharacterClass (GetCharAt (result)) == startClass) {
+				result++;
+			}
+			while (result < endOffset && GetCharacterClass (GetCharAt (result)) == CharacterClass.Whitespace) {
+				result++;
+			}
+			return result;
+		}
+		
+		public int FindPrevWordOffset (int offset)
+		{
+			int lineNumber = OffsetToLineNumber (offset);
+			LineSegment line = GetLine (lineNumber);
+			if (line == null)
+				return offset;
+			
+			int result = offset;
+			if (result == line.Offset) {
+				line = GetLine (lineNumber - 1);
+				if (line != null)
+					result = line.Offset + line.EditableLength;
+				return result;
+			}
+			
+			CharacterClass startClass = GetCharacterClass (GetCharAt (result - 1));
+			while (result > line.Offset && GetCharacterClass (GetCharAt (result - 1)) == startClass) {
+				result--;
+			}
+			if (startClass == CharacterClass.Whitespace && result > line.Offset) {
+				startClass = GetCharacterClass (GetCharAt (result - 1));
+				while (result > line.Offset && GetCharacterClass (GetCharAt (result - 1)) == startClass) {
+					result--;
+				}
+			}
+			return result;
+		}
+		
+//gedit like routines
+//		public static int FindPrevWordOffset (Document document, int offset)
+//		{
+//			if (offset <= 0)
+//				return 0;
+//			int  result = offset - 1;
+//			bool crossedEol = false;
+//			while (result > 0 && !Char.IsLetterOrDigit (document.GetCharAt (result))) {
+//				crossedEol |= document.GetCharAt (result) == '\n';
+//				crossedEol |= document.GetCharAt (result) == '\r';
+//				result--;
+//			}
+//			
+//			bool isLetter = Char.IsLetter (document.GetCharAt (result));
+//			bool isDigit  = Char.IsDigit (document.GetCharAt (result));
+//			if (crossedEol && (isLetter || isDigit))
+//				return result + 1;
+//			while (result > 0) {
+//				char ch = document.GetCharAt (result);
+//				if (isLetter) {
+//					if (Char.IsLetter (ch)) 
+//						result--;
+//					else {
+//						result++;
+//						break;
+//					}
+//				} else if (isDigit) {
+//					if (Char.IsDigit (ch)) 
+//						result--;
+//					else {
+//						result++;
+//						break;
+//					}
+//				} else {
+//					if (Char.IsLetterOrDigit (ch)) {
+//						result++;
+//						break;
+//					} else 
+//						result--;
+//				}
+//			}
+//			foreach (FoldSegment segment in document.GetFoldingsFromOffset (result)) {
+//				if (segment.IsFolded)
+//					result = System.Math.Min (result, segment.StartLine.Offset + segment.Column);
+//			}
+//			return result;
+//		}
+//		public static int FindNextWordOffset (Document document, int offset)
+//		{
+//			if (offset + 1 >= document.Length)
+//				return document.Length;
+//			int result = offset + 1;
+//			bool crossedEol = false;
+//			while (result < document.Length && !Char.IsLetterOrDigit (document.GetCharAt (result))) {
+//				crossedEol |= document.GetCharAt (result) == '\n';
+//				crossedEol |= document.GetCharAt (result) == '\r';
+//				result++;
+//			}
+//			
+//			bool isLetter = Char.IsLetter (document.GetCharAt (result));
+//			bool isDigit  = Char.IsDigit (document.GetCharAt (result));
+//			if (crossedEol && (isLetter || isDigit))
+//				return result;
+//			while (result < document.Length) {
+//				char ch = document.GetCharAt (result);
+//				if (isLetter) {
+//					if (Char.IsLetter (ch)) 
+//						result++;
+//					else {
+//						break;
+//					}
+//				} else if (isDigit) {
+//					if (Char.IsDigit (ch)) 
+//						result++;
+//					else {
+//						break;
+//					}
+//				} else {
+//					if (Char.IsLetterOrDigit (ch)) {
+//						break;
+//					} else 
+//						result++;
+//				}
+//			}
+//			foreach (FoldSegment segment in document.GetFoldingsFromOffset (result)) {
+//				if (segment.IsFolded)
+//					result = System.Math.Max (result, segment.EndLine.Offset + segment.EndColumn);
+//			}
+//			return result;
+//		}
+		#endregion
 	}
 }
