@@ -1,5 +1,12 @@
 2008-02-29  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
+	  Mono.TextEditor/Document.cs, Mono.TextEditor/TextUtil.cs,
+	  Mono.TextEditor/TextEditorData.cs: Moved TextUtil functions into
+	  Document.
+
+2008-02-29  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor.Highlighting/SyntaxModeService.cs,
 	  Mono.TextEditor.Highlighting/WorkerThread.cs: Abstracted safe threading
 	  in a reuseable workerthread class.
